--- a/學習記錄/css/scienceLiteracy.scss
+++ b/學習記錄/css/scienceLiteracy.scss
@@ -103,6 +103,12 @@
       & h4,
       p {
         font-size: 13px;
+        word-break: break-all;
+        word-wrap: break-word;
+        // overflow-wrap: normal;
+        // overflow: hidden;
+        // white-space: nowrap;
+        // text-overflow: ellipsis;
       }
       & img {
         width: 38px;
