--- a/學習記錄/css/index.scss
+++ b/學習記錄/css/index.scss
@@ -14,7 +14,8 @@ html {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  margin-bottom: 10px;
+  margin-top: 14px;
+  margin-bottom: 14px;
   & .selector {
     display: block;
     width: 100%;
@@ -22,6 +23,31 @@ html {
 
   & h4 {
     margin-right: 20px;
+  }
+}
+
+.input-group {
+  margin-top: 14px;
+  margin-bottom: 14px;
+  & .input-box {
+    position: relative;
+    & input {
+      display: block;
+      width: 100%;
+      border-radius: 20px;
+      border: 1px solid #a3a3a3;
+      height: 35px;
+      line-height: 35px;
+      padding-left: 15px;
+      padding-right: 30px;
+      color: #5c5c5c;
+    }
+    & i {
+      right: 10px;
+      top: 10px;
+      position: absolute;
+      font-size: 15px;
+    }
   }
 }
 
