--- a/學習記錄/css/scienceLiteracy.css
+++ b/學習記錄/css/scienceLiteracy.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .scienceLiteracy-history-big-title,
 .scienceLiteracy-history-row-title {
   display: -ms-grid;
@@ -48,6 +49,7 @@
   display: -ms-grid;
   display: grid;
   padding: 10px;
+  padding-bottom: 15px;
   background-color: #fbf6e3;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
@@ -112,6 +114,11 @@
   grid-column: 1/2;
 }
 
+.scienceLiteracy-history-row-data .row-data-table.show-history .row-data-table-data.history-data {
+  display: -ms-grid;
+  display: grid;
+}
+
 .scienceLiteracy-history-row-data .row-data-table .row-data-table-data {
   display: -ms-grid;
   display: grid;
@@ -135,13 +142,31 @@
   word-wrap: break-word;
 }
 
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data h4.error-answer,
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data p.error-answer {
+  text-decoration: line-through;
+  color: var(--contrast-color);
+}
+
 .scienceLiteracy-history-row-data .row-data-table .row-data-table-data img {
   width: 38px;
 }
 
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data {
+  display: none;
+}
+
 .scienceLiteracy-history-row-data .row-data-more {
-  height: 30px;
-  font-size: 12px;
+  height: 40px;
+  font-size: 19px;
+}
+
+.scienceLiteracy-history-row-data .row-data-more.show::after {
+  content: "隱藏本題過往作答歷史";
+}
+
+.scienceLiteracy-history-row-data .row-data-more::after {
+  content: "查看本題過往作答歷史";
 }
 
 @media (min-width: 1024px) {
@@ -180,15 +205,13 @@
   }
   .scienceLiteracy-history-row-data .row-data-table .row-data-table-data button {
     margin: 0;
-    font-size: 14px;
+    font-size: 15px;
     height: 30px;
   }
   .scienceLiteracy-history-row-data .row-data-more {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
-    height: 40px;
-    font-size: 19px;
   }
 }
 /*# sourceMappingURL=scienceLiteracy.css.map */
