Finish ScienceLiteracy-history api connect

--- a/學習記錄/css/scienceLiteracy.css
+++ b/學習記錄/css/scienceLiteracy.css
@@ -1,4 +1,17 @@
 @charset "UTF-8";
+.scienceLiteracy-history-row.active .scienceLiteracy-history-row-title {
+  border-bottom: 1px solid var(--main-dark);
+}
+
+.scienceLiteracy-history-row.active .scienceLiteracy-history-row-title i {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.scienceLiteracy-history-row.active .scienceLiteracy-history-row-data {
+  border-bottom: 1px solid var(--main-dark);
+}
+
 .scienceLiteracy-history-big-title,
 .scienceLiteracy-history-row-title {
   display: -ms-grid;
@@ -8,7 +21,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px solid #000;
+  border: 1px solid var(--main-dark);
   padding: 10px 2px 10px 20px;
   color: #707070;
   cursor: default;
@@ -40,17 +53,12 @@
   border-top: 0px;
 }
 
-.scienceLiteracy-history-row-title.active i {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
 .scienceLiteracy-history-row-data {
   display: -ms-grid;
   display: grid;
   padding: 10px;
   padding-bottom: 15px;
-  background-color: #fbf6e3;
+  background-color: var(--secondary-light);
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
   grid-gap: 10px;
@@ -124,7 +132,7 @@
   display: grid;
   -ms-grid-columns: 0.3fr 1fr 0.3fr;
       grid-template-columns: 0.3fr 1fr 0.3fr;
-  grid-gap: 14px;
+  grid-gap: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
