--- a/學習記錄/css/index.css
+++ b/學習記錄/css/index.css
@@ -1,4 +1,5 @@
 @import url("./scienceLiteracy.css");
+@import url("./downloadModal.css");
 @import url("./utinity.css");
 html {
   overflow-y: auto !important;
