--- a/學習記錄/css/downloadModal.css
+++ b/學習記錄/css/downloadModal.css
@@ -111,6 +111,8 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   position: relative;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 @media (min-width: 1100px) {
