--- a/學習記錄/css/downloadModal.scss
+++ b/學習記錄/css/downloadModal.scss
@@ -102,6 +102,8 @@
   max-width: unset;
   box-sizing: border-box;
   position: relative;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 // @media (min-width: 1100px) {
