--- a/學習記錄/css/_downloadModal.scss
+++ b/學習記錄/css/_downloadModal.scss
@@ -33,6 +33,7 @@
       border: none;
       padding-left: 20px;
       padding-right: 30px;
+      outline: none;
     }
     & button {
       position: absolute;
@@ -67,7 +68,7 @@
   }
 
   & .filterBox-checkBox-group-list {
-    max-height: 45vh;
+    height: 45vh;
     overflow-y: auto;
     & .filterBox-checkBox-group {
       overflow-x: hidden;
