--- a/學習記錄/css/index.css
+++ b/學習記錄/css/index.css
@@ -1,6 +1,329 @@
-@import url("./scienceLiteracy.css");
-@import url("./downloadModal.css");
-@import url("./utinity.css");
+@charset "UTF-8";
+:root {
+  --border-color: #e5e5e5;
+}
+
+.ModalBoxDetailText {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 20px;
+  margin: 0;
+  padding: 20px 10px 20px 10px;
+}
+
+.filterBox-group {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+  margin: 0 auto;
+}
+
+.filterBox {
+  height: 100%;
+  border: 1px solid var(--border-color);
+}
+.filterBox .filterBox-input-group {
+  width: inherit;
+  position: relative;
+  border-bottom: 1px solid var(--border-color);
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.filterBox .filterBox-input-group input {
+  display: block;
+  width: 100%;
+  border: none;
+  padding-left: 20px;
+  padding-right: 30px;
+  outline: none;
+}
+.filterBox .filterBox-input-group button {
+  position: absolute;
+  height: 100%;
+  width: 30px;
+  top: 0;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.filterBox .filterBox-checkBox-selectAll {
+  padding: 10px 20px;
+  border-bottom: 1px solid var(--border-color);
+}
+.filterBox .filterBox-checkBox-selectAll label::before {
+  height: 18px;
+  width: 18px;
+}
+.filterBox .filterBox-checkBox-selectAll label::after {
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  font-size: 5px;
+  text-align: center;
+}
+.filterBox .filterBox-checkBox-group-list {
+  height: 45vh;
+  overflow-y: auto;
+}
+.filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group {
+  overflow-x: hidden;
+  padding: 10px 20px;
+}
+.filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label {
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  word-wrap: break-word;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label::before {
+  height: 18px;
+  width: 18px;
+}
+.filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label::after {
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  font-size: 5px;
+  text-align: center;
+}
+
+.ModalBoxContent {
+  max-width: unset;
+  box-sizing: border-box;
+  position: relative;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+@media (min-width: 1100px) {
+  .ModalBoxDetailText {
+    min-width: 75vw;
+    max-width: 78vw;
+    max-height: 75vh;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .filterBox-group {
+    width: 100%;
+  }
+}
+.scienceLiteracy-history-row.active .scienceLiteracy-history-row-title {
+  border-bottom: 1px solid var(--main-dark);
+}
+.scienceLiteracy-history-row.active .scienceLiteracy-history-row-title i {
+  transform: rotate(90deg);
+}
+.scienceLiteracy-history-row.active .scienceLiteracy-history-row-data {
+  border-bottom: 1px solid var(--main-dark);
+}
+
+.scienceLiteracy-history-big-title,
+.scienceLiteracy-history-row-title {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  border: 1px solid var(--main-dark);
+  padding: 10px 2px 10px 20px;
+  color: #707070;
+  cursor: default;
+}
+.scienceLiteracy-history-big-title h4,
+.scienceLiteracy-history-row-title h4 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 166.3%;
+  margin: 0;
+}
+
+.scienceLiteracy-history-row-title {
+  grid-template-columns: 1fr 0.3fr;
+  cursor: pointer;
+}
+.scienceLiteracy-history-row-title i {
+  justify-self: end;
+  margin-right: 20px;
+  transition: all 0.3s;
+}
+.scienceLiteracy-history-row-title:nth-child(1) {
+  border-top: 0px;
+}
+
+.scienceLiteracy-history-row-data {
+  display: grid;
+  padding: 10px;
+  padding-bottom: 15px;
+  background-color: var(--secondary-light);
+  grid-template-columns: 1fr;
+  grid-gap: 10px;
+}
+.scienceLiteracy-history-row-data .row-data-title {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 166.3%;
+  text-align: center;
+  color: #707070;
+  background-color: #fff;
+}
+.scienceLiteracy-history-row-data .row-data-content {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 166.3%;
+}
+.scienceLiteracy-history-row-data .row-data-number .row-data-number-title {
+  margin-bottom: 10px;
+}
+.scienceLiteracy-history-row-data .row-data-number .row-data-number-btn-group {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+.scienceLiteracy-history-row-data .row-data-number .row-data-number-btn-group > button {
+  flex-grow: 1;
+  height: 30px;
+  font-size: 12px;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-title {
+  display: grid;
+  grid-template-columns: 1fr 0.2fr;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-title h4 {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 166.3%;
+  color: #707070;
+  background-color: #fff;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-title h4:nth-child(1) {
+  padding-left: 10px;
+  grid-column: 1/2;
+}
+.scienceLiteracy-history-row-data .row-data-table.show-history .row-data-table-data.history-data {
+  display: grid;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data {
+  display: grid;
+  grid-template-columns: 0.3fr 1fr 0.3fr;
+  grid-gap: 10px;
+  align-items: center;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data h4 {
+  background-color: #fff;
+  padding-left: 10px;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data h4,
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data p {
+  font-size: 13px;
+  word-break: break-all;
+  word-wrap: break-word;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data h4.error-answer,
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data p.error-answer {
+  text-decoration: line-through;
+  color: var(--contrast-color);
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data img {
+  width: 38px;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data {
+  display: none;
+}
+.scienceLiteracy-history-row-data .row-data-more {
+  height: 40px;
+  font-size: 19px;
+}
+.scienceLiteracy-history-row-data .row-data-more.show::after {
+  content: "隱藏本題過往作答歷史";
+}
+.scienceLiteracy-history-row-data .row-data-more::after {
+  content: "查看本題過往作答歷史";
+}
+
+@media (min-width: 1024px) {
+  .scienceLiteracy-history-big-title {
+    grid-template-columns: 1fr 1fr 0.3fr;
+  }
+  .scienceLiteracy-history-row-title {
+    grid-template-columns: 1fr 1fr 0.3fr;
+  }
+  .scienceLiteracy-history-row-data {
+    grid-template-columns: 100px 4fr;
+    grid-gap: 10px;
+  }
+  .scienceLiteracy-history-row-data .row-data-table {
+    grid-column: 1/3;
+  }
+  .scienceLiteracy-history-row-data .row-data-table .row-data-table-title {
+    grid-gap: 10px;
+    grid-template-columns: 100px 1fr 0.2fr 0.2fr;
+  }
+  .scienceLiteracy-history-row-data .row-data-table .row-data-table-title h4 {
+    margin-bottom: 12px;
+  }
+  .scienceLiteracy-history-row-data .row-data-table .row-data-table-data {
+    grid-template-columns: 100px 1fr 0.2fr 0.2fr;
+  }
+  .scienceLiteracy-history-row-data .row-data-table .row-data-table-data p {
+    font-size: 15px;
+  }
+  .scienceLiteracy-history-row-data .row-data-table .row-data-table-data button {
+    margin: 0;
+    font-size: 15px;
+    height: 30px;
+  }
+  .scienceLiteracy-history-row-data .row-data-more {
+    grid-column: 1/3;
+  }
+}
+.d-block {
+  display: block;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.m-auto {
+  margin: auto;
+}
+
+.m-0 {
+  margin: 0;
+}
+
+.m-1 {
+  margin: 0.25rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
+}
+
+.m-3 {
+  margin: 1rem;
+}
+
+.md-d-none {
+  display: block;
+}
+
+.sm-d-none {
+  display: none;
+}
+
+.text-center {
+  text-align: center;
+}
+
+@media (min-width: 1024px) {
+  .sm-d-none {
+    display: block;
+  }
+  .md-d-none {
+    display: none;
+  }
+}
 html {
   overflow-y: auto !important;
 }
@@ -11,23 +334,16 @@ html {
 }
 
 .selector-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  align-items: center;
+  flex-wrap: wrap;
   margin-top: 14px;
   margin-bottom: 14px;
 }
-
 .selector-group .selector {
   display: block;
   width: 100%;
 }
-
 .selector-group h4 {
   margin-right: 20px;
 }
@@ -36,11 +352,9 @@ html {
   margin-top: 14px;
   margin-bottom: 14px;
 }
-
 .input-group .input-box {
   position: relative;
 }
-
 .input-group .input-box input {
   display: block;
   width: 100%;
@@ -52,7 +366,6 @@ html {
   padding-right: 30px;
   color: #5c5c5c;
 }
-
 .input-group .input-box i {
   right: 10px;
   top: 10px;
@@ -62,38 +375,30 @@ html {
 
 .pageTab .pageTabList {
   border: 0px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin-bottom: 10px;
 }
-
 .pageTab .pageTabList li {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   text-align: center;
   margin: 0px;
   border-radius: 0px;
   border-bottom: 1px solid #ebebeb;
 }
-
 .pageTab .pageTabList li.actTab {
   border-bottom: 0px;
 }
 
 #content1 {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 20px;
 }
 
 .contant-custom {
   padding: 14px;
   vertical-align: top;
-  -webkit-box-shadow: 0px 0px 5px #30313345;
-          box-shadow: 0px 0px 5px #30313345;
+  box-shadow: 0px 0px 5px rgba(48, 49, 51, 0.2705882353);
   background: #fff;
   padding: 10px 10px;
   color: #5c5c5c;
@@ -109,14 +414,11 @@ html {
 
 @media (min-width: 768px) {
   #content1 {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 0.5fr 3fr;
-        grid-template-columns: 0.5fr 3fr;
+    grid-template-columns: 0.5fr 3fr;
     grid-gap: 40px;
   }
   .search-btn {
     width: 100%;
   }
-}
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
