--- a/學習歷程雷達/css/index.scss
+++ b/學習歷程雷達/css/index.scss
@@ -1,4 +1,4 @@
-@import url("./utinity.css");
+@import "./utinity";
 // 嵌入至正式區時需要拿掉
 html {
   overflow-y: auto !important;
@@ -13,8 +13,26 @@ canvas {
   border: none;
 }
 
-.container {
-  max-width: 1636px;
+.container#scienceLiteracyStatistics_container {
+  max-width: 1306px;
+}
+
+.scienceLiteracyStatistics-summary {
+  margin: 15px 0px;
+  h3 {
+    font-size: 12px;
+    margin: 5px 0px;
+  }
+
+  & .green-text,
+  .red-text {
+    color: var(--main-color);
+    font-size: inherit;
+  }
+
+  & .red-text {
+    color: #f00;
+  }
 }
 
 .scienceLiteracyStatistics-area {
@@ -89,6 +107,7 @@ canvas {
           & > .green-text {
             color: var(--main-color);
             font-size: inherit;
+            cursor: pointer;
           }
 
           & i {
@@ -126,22 +145,41 @@ canvas {
 }
 
 @media (min-width: 1200px) {
+  .scienceLiteracyStatistics-summary {
+    margin: 40px 0px;
+    h3 {
+      font-size: 19px;
+      margin: 10px 0px;
+    }
+  }
+
   .scienceLiteracyStatistics-data {
     padding: 0px 30px;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
 
     &.type-1 {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(5, 1fr);
       grid-gap: 30px;
       & .chart-container {
         min-height: 500px;
-        grid-column: 1/4;
+        grid-column: 1/6;
+        margin-bottom: -80px;
+      }
+
+      & .card:nth-child(2) {
+        grid-column: 2/3;
+      }
+      & .card:nth-child(3) {
+        grid-column: 3/4;
+      }
+      & .card:nth-child(4) {
+        grid-column: 4/5;
       }
     }
 
     &.type-2 {
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: 2fr repeat(3, 1fr);
       grid-gap: 30px;
       grid-row-gap: 10px;
       & .sub-title {
