--- a/學習歷程雷達/css/index.css
+++ b/學習歷程雷達/css/index.css
@@ -74,12 +74,19 @@ canvas {
 .container#scienceLiteracyStatistics_container {
   max-width: 1306px;
 }
+.container#scienceLiteracyStatistics_container .hr {
+  height: 1px;
+  width: 100%;
+  background-color: #e7e7e7;
+  margin: 0px 0px 30px 0px;
+}
 
 .scienceLiteracyStatistics-summary {
   margin: 15px 0px;
 }
 .scienceLiteracyStatistics-summary h3 {
   font-size: 12px;
+  font-weight: normal;
   margin: 5px 0px;
 }
 .scienceLiteracyStatistics-summary .green-text,
@@ -102,6 +109,7 @@ canvas {
   align-items: center;
   margin-bottom: 25px;
   font-size: 12px;
+  font-weight: normal;
 }
 
 .scienceLiteracyStatistics-data {
@@ -116,7 +124,13 @@ canvas {
   min-height: 290px;
   grid-column: 1/3;
 }
+.scienceLiteracyStatistics-data.type-2 {
+  margin-bottom: 40px;
+}
 .scienceLiteracyStatistics-data.type-2 .sub-title {
+  font-size: 15px;
+  font-weight: normal;
+  color: #848484;
   grid-column: 1/3;
   text-align: center;
 }
@@ -127,6 +141,7 @@ canvas {
 .scienceLiteracyStatistics-data .card .card-body {
   width: 100%;
   font-size: 12px;
+  color: #848484;
   border: 1px solid #848484;
 }
 .scienceLiteracyStatistics-data .card .card-body .card-title {
@@ -134,9 +149,10 @@ canvas {
   text-align: center;
   font-size: 13px;
   border-bottom: 1px solid #848484;
+  font-weight: normal;
 }
 .scienceLiteracyStatistics-data .card .card-body .card-info {
-  padding: 4px 10px;
+  padding: 4px 20px;
   font-size: inherit;
 }
 .scienceLiteracyStatistics-data .card .card-body .card-info > span {
@@ -156,12 +172,16 @@ canvas {
   cursor: pointer;
 }
 .scienceLiteracyStatistics-data .card .card-body .card-info > span i {
+  margin-left: 5px;
   font-size: inherit;
 }
 .scienceLiteracyStatistics-data .card .card-body .more {
-  padding: 10px 10px;
+  padding: 10px 20px;
+  color: #848484;
   border-top: 1px solid #848484;
   font-size: inherit;
+  line-height: 166.8%;
+  font-weight: normal;
   cursor: pointer;
 }
 .scienceLiteracyStatistics-data .card .card-body .more i {
@@ -188,14 +208,18 @@ canvas {
     font-size: 19px;
     margin: 10px 0px;
   }
+  .scienceLiteracyStatistics-area .big-title {
+    font-size: 19px;
+  }
   .scienceLiteracyStatistics-data {
-    padding: 0px 30px;
+    padding: 0px 0px;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
   }
   .scienceLiteracyStatistics-data.type-1 {
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 30px;
+    margin-bottom: 70px;
   }
   .scienceLiteracyStatistics-data.type-1 .chart-container {
     min-height: 500px;
@@ -212,9 +236,10 @@ canvas {
     grid-column: 4/5;
   }
   .scienceLiteracyStatistics-data.type-2 {
-    grid-template-columns: 2fr repeat(3, 1fr);
+    grid-template-columns: 1.8fr repeat(3, 1fr);
     grid-gap: 30px;
     grid-row-gap: 10px;
+    margin-bottom: 80px;
   }
   .scienceLiteracyStatistics-data.type-2 .sub-title {
     grid-column: 2/5;
@@ -228,6 +253,7 @@ canvas {
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 30px;
     grid-row-gap: 10px;
+    margin-bottom: 70px;
   }
   .scienceLiteracyStatistics-data.type-3 .sub-title {
     grid-column: 2/5;
@@ -244,6 +270,8 @@ canvas {
     font-size: 19px;
   }
   .scienceLiteracyStatistics-data .card .card-body .card-title {
+    padding: 10px;
     font-size: 19px;
+    line-height: 166.8%;
   }
 }/*# sourceMappingURL=index.css.map */
