--- a/學習歷程雷達/css/index.scss
+++ b/學習歷程雷達/css/index.scss
@@ -15,12 +15,20 @@ canvas {
 
 .container#scienceLiteracyStatistics_container {
   max-width: 1306px;
+
+  .hr {
+    height: 1px;
+    width: 100%;
+    background-color: #e7e7e7;
+    margin: 0px 0px 30px 0px;
+  }
 }
 
 .scienceLiteracyStatistics-summary {
   margin: 15px 0px;
   h3 {
     font-size: 12px;
+    font-weight: normal;
     margin: 5px 0px;
   }
 
@@ -45,6 +53,7 @@ canvas {
     align-items: center;
     margin-bottom: 25px;
     font-size: 12px;
+    font-weight: normal;
   }
 }
 
@@ -64,7 +73,11 @@ canvas {
   }
 
   &.type-2 {
+    margin-bottom: 40px;
     & .sub-title {
+      font-size: 15px;
+      font-weight: normal;
+      color: #848484;
       grid-column: 1/3;
       text-align: center;
     }
@@ -76,6 +89,7 @@ canvas {
     & .card-body {
       width: 100%;
       font-size: 12px;
+      color: #848484;
       border: 1px solid #848484;
 
       & .card-title {
@@ -83,10 +97,11 @@ canvas {
         text-align: center;
         font-size: 13px;
         border-bottom: 1px solid #848484;
+        font-weight: normal;
       }
 
       & .card-info {
-        padding: 4px 10px;
+        padding: 4px 20px;
         font-size: inherit;
         // border-bottom: 1px solid #848484;
 
@@ -111,15 +126,20 @@ canvas {
           }
 
           & i {
+            margin-left: 5px;
             font-size: inherit;
           }
         }
       }
 
       & .more {
-        padding: 10px 10px;
+        padding: 10px 20px;
+        color: #848484;
         border-top: 1px solid #848484;
         font-size: inherit;
+        line-height: 166.8%;
+        font-weight: normal;
+
         cursor: pointer;
         & i {
           font-size: inherit;
@@ -153,14 +173,21 @@ canvas {
     }
   }
 
+  .scienceLiteracyStatistics-area {
+    .big-title {
+      font-size: 19px;
+    }
+  }
+
   .scienceLiteracyStatistics-data {
-    padding: 0px 30px;
+    padding: 0px 0px;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
 
     &.type-1 {
       grid-template-columns: repeat(5, 1fr);
       grid-gap: 30px;
+      margin-bottom: 70px;
       & .chart-container {
         min-height: 500px;
         grid-column: 1/6;
@@ -179,9 +206,10 @@ canvas {
     }
 
     &.type-2 {
-      grid-template-columns: 2fr repeat(3, 1fr);
+      grid-template-columns: 1.8fr repeat(3, 1fr);
       grid-gap: 30px;
       grid-row-gap: 10px;
+      margin-bottom: 80px;
       & .sub-title {
         grid-column: 2/5;
         text-align: left;
@@ -196,6 +224,7 @@ canvas {
       grid-template-columns: repeat(4, 1fr);
       grid-gap: 30px;
       grid-row-gap: 10px;
+      margin-bottom: 70px;
       & .sub-title {
         grid-column: 2/5;
         text-align: left;
@@ -212,7 +241,9 @@ canvas {
       & .card-body {
         font-size: 19px;
         & .card-title {
+          padding: 10px;
           font-size: 19px;
+          line-height: 166.8%;
         }
       }
     }
