Add Radar tablet style

--- a/學習歷程雷達/css/index.css
+++ b/學習歷程雷達/css/index.css
@@ -194,13 +194,62 @@ canvas {
 }
 .scienceLiteracyStatistics-data .card .card-body .more-info {
   display: none;
-  padding: 0px 10px 5px 10px;
+  padding: 0px 20px 5px 20px;
   font-size: inherit;
   line-height: 166.3%;
   text-align: justify;
+  font-weight: normal;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) and (max-width: 1261px) {
+  .scienceLiteracyStatistics-summary {
+    margin: 20px 0px;
+  }
+  .scienceLiteracyStatistics-summary h3 {
+    font-size: 19px;
+    margin: 10px 0px;
+  }
+  .scienceLiteracyStatistics-area .big-title {
+    font-size: 19px;
+  }
+  .scienceLiteracyStatistics-data.type-1 {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    margin-bottom: 70px;
+  }
+  .scienceLiteracyStatistics-data.type-1 .chart-container {
+    min-height: 500px;
+    grid-column: 1/4;
+    margin-bottom: -80px;
+  }
+  .scienceLiteracyStatistics-data.type-2 {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    grid-row-gap: 10px;
+    margin-bottom: 80px;
+  }
+  .scienceLiteracyStatistics-data.type-2 .sub-title {
+    font-size: 19px;
+    grid-column: 2/3;
+    text-align: center;
+  }
+  .scienceLiteracyStatistics-data.type-2 .chart-container {
+    min-height: 290px;
+    grid-column: 1/4;
+  }
+  .scienceLiteracyStatistics-data .card {
+    font-size: 19px;
+  }
+  .scienceLiteracyStatistics-data .card .card-body {
+    font-size: 19px;
+  }
+  .scienceLiteracyStatistics-data .card .card-body .card-title {
+    padding: 10px;
+    font-size: 19px;
+    line-height: 166.8%;
+  }
+}
+@media (min-width: 1262px) {
   .scienceLiteracyStatistics-summary {
     margin: 40px 0px;
   }
