--- a/學習記錄/css/_scienceLiteracy.scss
+++ b/學習記錄/css/_scienceLiteracy.scss
@@ -22,7 +22,7 @@
   padding: 10px 2px 10px 20px;
   color: #707070;
   cursor: default;
-  h4 {
+  & h4 {
     font-weight: 700;
     font-size: 16px;
     line-height: 166.3%;
@@ -33,6 +33,10 @@
 .scienceLiteracy-history-row-title {
   grid-template-columns: 1fr 0.3fr;
   cursor: pointer;
+  & h4 {
+    font-weight: normal;
+  }
+
   & i {
     justify-self: end;
     margin-right: 20px;
@@ -65,6 +69,7 @@
     font-weight: 400;
     font-size: 15px;
     line-height: 166.3%;
+    color: #707070;
   }
 
   .row-data-number {
@@ -89,11 +94,11 @@
       display: grid;
       grid-template-columns: 1fr 0.2fr;
       h4 {
-        font-weight: 400;
         font-size: 14px;
         line-height: 166.3%;
         color: #707070;
         background-color: #fff;
+        font-weight: normal;
         &:nth-child(1) {
           padding-left: 10px;
           grid-column: 1/2;
@@ -123,6 +128,8 @@
         font-size: 13px;
         word-break: break-all;
         word-wrap: break-word;
+        color: #707070;
+        font-weight: normal;
         // overflow-wrap: normal;
         // overflow: hidden;
         // white-space: nowrap;
