--- a/學習記錄/css/index.scss
+++ b/學習記錄/css/index.scss
@@ -85,6 +85,9 @@ html {
   color: #5c5c5c;
   font-size: 19px;
   margin-bottom: 20px;
+  & h4 {
+    font-weight: normal;
+  }
 }
 
 .contant-collapse {
@@ -101,6 +104,7 @@ html {
 
   & h3 {
     text-align: center;
+    font-weight: normal;
   }
   & i {
     top: 50%;
