--- a/學習歷程雷達/css/index.css
+++ b/學習歷程雷達/css/index.css
@@ -121,6 +121,7 @@ canvas {
   grid-gap: 10px;
 }
 .scienceLiteracyStatistics-data.type-1 .chart-container, .scienceLiteracyStatistics-data.type-2 .chart-container, .scienceLiteracyStatistics-data.type-3 .chart-container {
+  width: 100%;
   min-height: 290px;
   grid-column: 1/3;
 }
@@ -291,6 +292,7 @@ canvas {
     margin-bottom: 80px;
   }
   .scienceLiteracyStatistics-data.type-2 .sub-title {
+    font-size: 19px;
     grid-column: 2/5;
     text-align: left;
   }
@@ -309,7 +311,9 @@ canvas {
     text-align: left;
   }
   .scienceLiteracyStatistics-data.type-3 .chart-container {
-    min-height: 290px;
+    min-height: 400px;
+    margin-top: 50px;
+    margin-bottom: 70px;
     grid-column: 1/5;
   }
   .scienceLiteracyStatistics-data .card {
