--- a/學習歷程雷達/css/index.scss
+++ b/學習歷程雷達/css/index.scss
@@ -67,6 +67,7 @@ canvas {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
     & .chart-container {
+      width: 100%;
       min-height: 290px;
       grid-column: 1/3;
     }
@@ -269,6 +270,7 @@ canvas {
       grid-row-gap: 10px;
       margin-bottom: 80px;
       & .sub-title {
+        font-size: 19px;
         grid-column: 2/5;
         text-align: left;
       }
@@ -288,7 +290,9 @@ canvas {
         text-align: left;
       }
       & .chart-container {
-        min-height: 290px;
+        min-height: 400px;
+        margin-top: 50px;
+        margin-bottom: 70px;
         grid-column: 1/5;
       }
     }
