--- a/學習記錄/css/_downloadModal.scss
+++ b/學習記錄/css/_downloadModal.scss
@@ -15,6 +15,10 @@
   flex-direction: column;
   width: 80vw;
   margin: 0 auto;
+  & h4 {
+    font-size: 14px;
+    font-weight: normal;
+  }
 }
 
 .filterBox {
@@ -27,6 +31,7 @@
     border-bottom: 1px solid var(--border-color);
     padding-top: 5px;
     padding-bottom: 5px;
+    font-size: 14px;
     & input {
       display: block;
       width: 100%;
@@ -34,6 +39,11 @@
       padding-left: 20px;
       padding-right: 30px;
       outline: none;
+      font-size: inherit;
+
+      &::placeholder {
+        color: #e5e5e5;
+      }
     }
     & button {
       position: absolute;
@@ -44,24 +54,26 @@
       background-color: transparent;
       border: none;
       cursor: pointer;
+      font-size: inherit;
     }
   }
 
   & .filterBox-checkBox-selectAll {
     padding: 10px 20px;
     border-bottom: 1px solid var(--border-color);
-
+    font-size: 14px;
     & label {
+      font-size: inherit;
       &::before {
-        height: 18px;
-        width: 18px;
+        height: 16px;
+        width: 16px;
       }
 
       &::after {
-        height: 16px;
-        width: 16px;
+        height: 14px;
+        width: 14px;
         left: 2px;
-        font-size: 12px;
+        font-size: 10px;
         text-align: center;
       }
     }
@@ -70,9 +82,11 @@
   & .filterBox-checkBox-group-list {
     height: 45vh;
     overflow-y: auto;
+    font-size: 14px;
     & .filterBox-checkBox-group {
       overflow-x: hidden;
       padding: 10px 20px;
+      font-size: inherit;
 
       & label {
         display: block;
@@ -81,17 +95,18 @@
         word-wrap: break-word;
         white-space: nowrap;
         text-overflow: ellipsis;
+        font-size: inherit;
 
         &::before {
-          height: 18px;
-          width: 18px;
+          height: 16px;
+          width: 16px;
         }
 
         &::after {
-          height: 16px;
-          width: 16px;
+          height: 14px;
+          width: 14px;
           left: 2px;
-          font-size: 12px;
+          font-size: 10px;
           text-align: center;
         }
       }
@@ -112,6 +127,36 @@
 //     grid-template-columns: 1fr;
 //   }
 // }
+
+@media (min-width: 768px) {
+  .filterBox-group {
+    & h4 {
+      font-size: 19px;
+    }
+  }
+  .filterBox {
+    .filterBox-input-group {
+      font-size: 19px;
+    }
+
+    & .filterBox-checkBox-selectAll,
+    & .filterBox-checkBox-group-list {
+      font-size: 19px;
+      & label {
+        &::before {
+          height: 18px;
+          width: 18px;
+        }
+
+        &::after {
+          height: 16px;
+          width: 16px;
+          font-size: 12px;
+        }
+      }
+    }
+  }
+}
 
 @media (min-width: 1100px) {
   .ModalBoxDetailText {
