--- a/學習記錄/css/index.css
+++ b/學習記錄/css/index.css
@@ -17,6 +17,10 @@
   width: 80vw;
   margin: 0 auto;
 }
+.filterBox-group h4 {
+  font-size: 14px;
+  font-weight: normal;
+}
 
 .filterBox {
   height: 100%;
@@ -28,6 +32,7 @@
   border-bottom: 1px solid var(--border-color);
   padding-top: 5px;
   padding-bottom: 5px;
+  font-size: 14px;
 }
 .filterBox .filterBox-input-group input {
   display: block;
@@ -36,6 +41,16 @@
   padding-left: 20px;
   padding-right: 30px;
   outline: none;
+  font-size: inherit;
+}
+.filterBox .filterBox-input-group input::-moz-placeholder {
+  color: #e5e5e5;
+}
+.filterBox .filterBox-input-group input:-ms-input-placeholder {
+  color: #e5e5e5;
+}
+.filterBox .filterBox-input-group input::placeholder {
+  color: #e5e5e5;
 }
 .filterBox .filterBox-input-group button {
   position: absolute;
@@ -46,29 +61,36 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+  font-size: inherit;
 }
 .filterBox .filterBox-checkBox-selectAll {
   padding: 10px 20px;
   border-bottom: 1px solid var(--border-color);
+  font-size: 14px;
+}
+.filterBox .filterBox-checkBox-selectAll label {
+  font-size: inherit;
 }
 .filterBox .filterBox-checkBox-selectAll label::before {
-  height: 18px;
-  width: 18px;
-}
-.filterBox .filterBox-checkBox-selectAll label::after {
   height: 16px;
   width: 16px;
+}
+.filterBox .filterBox-checkBox-selectAll label::after {
+  height: 14px;
+  width: 14px;
   left: 2px;
-  font-size: 12px;
+  font-size: 10px;
   text-align: center;
 }
 .filterBox .filterBox-checkBox-group-list {
   height: 45vh;
   overflow-y: auto;
+  font-size: 14px;
 }
 .filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group {
   overflow-x: hidden;
   padding: 10px 20px;
+  font-size: inherit;
 }
 .filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label {
   display: block;
@@ -77,16 +99,17 @@
   word-wrap: break-word;
   white-space: nowrap;
   text-overflow: ellipsis;
+  font-size: inherit;
 }
 .filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label::before {
-  height: 18px;
-  width: 18px;
-}
-.filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label::after {
   height: 16px;
   width: 16px;
+}
+.filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label::after {
+  height: 14px;
+  width: 14px;
   left: 2px;
-  font-size: 12px;
+  font-size: 10px;
   text-align: center;
 }
 
@@ -98,6 +121,26 @@
   overflow-x: hidden;
 }
 
+@media (min-width: 768px) {
+  .filterBox-group h4 {
+    font-size: 19px;
+  }
+  .filterBox .filterBox-input-group {
+    font-size: 19px;
+  }
+  .filterBox .filterBox-checkBox-selectAll, .filterBox .filterBox-checkBox-group-list {
+    font-size: 19px;
+  }
+  .filterBox .filterBox-checkBox-selectAll label::before, .filterBox .filterBox-checkBox-group-list label::before {
+    height: 18px;
+    width: 18px;
+  }
+  .filterBox .filterBox-checkBox-selectAll label::after, .filterBox .filterBox-checkBox-group-list label::after {
+    height: 16px;
+    width: 16px;
+    font-size: 12px;
+  }
+}
 @media (min-width: 1100px) {
   .ModalBoxDetailText {
     min-width: 75vw;
@@ -460,7 +503,7 @@ html {
   padding: 14px;
   box-shadow: 0px 0px 5px rgba(48, 49, 51, 0.2705882353);
   background: #fff;
-  padding: 10px 10px;
+  padding: 10px 10px 20px 10px;
   color: #5c5c5c;
   font-size: 14px;
   margin-bottom: 20px;
@@ -529,7 +572,6 @@ html {
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 20px;
     grid-row-gap: 10px;
-    padding-bottom: 20px;
   }
   .contant-custom hr {
     display: none;
