--- a/學習記錄/css/index.scss
+++ b/學習記錄/css/index.scss
@@ -106,7 +106,7 @@ html {
   padding: 14px;
   box-shadow: 0px 0px 5px #30313345;
   background: #fff;
-  padding: 10px 10px;
+  padding: 10px 10px 20px 10px;
   color: #5c5c5c;
   font-size: 14px;
   margin-bottom: 20px;
@@ -187,7 +187,7 @@ html {
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 20px;
     grid-row-gap: 10px;
-    padding-bottom: 20px;
+    // padding-bottom: 20px;
 
     hr {
       display: none;
