--- a/學習記錄/css/index.css
+++ b/學習記錄/css/index.css
@@ -43,6 +43,12 @@
   outline: none;
   font-size: inherit;
 }
+.filterBox .filterBox-input-group input::-moz-placeholder {
+  color: #e5e5e5;
+}
+.filterBox .filterBox-input-group input:-ms-input-placeholder {
+  color: #e5e5e5;
+}
 .filterBox .filterBox-input-group input::placeholder {
   color: #e5e5e5;
 }
@@ -75,6 +81,7 @@
   left: 2px;
   font-size: 10px;
   text-align: center;
+  line-height: 150%;
 }
 .filterBox .filterBox-checkBox-group-list {
   height: 45vh;
@@ -105,6 +112,7 @@
   left: 2px;
   font-size: 10px;
   text-align: center;
+  line-height: 150%;
 }
 
 .ModalBoxContent {
@@ -119,21 +127,31 @@
   .filterBox-group h4 {
     font-size: 19px;
   }
-
   .filterBox .filterBox-input-group {
     font-size: 19px;
   }
-  .filterBox .filterBox-checkBox-selectAll, .filterBox .filterBox-checkBox-group-list {
+  .filterBox .filterBox-checkBox-selectAll {
     font-size: 19px;
   }
-  .filterBox .filterBox-checkBox-selectAll label::before, .filterBox .filterBox-checkBox-group-list label::before {
+  .filterBox .filterBox-checkBox-selectAll label::before {
     height: 18px;
     width: 18px;
   }
-  .filterBox .filterBox-checkBox-selectAll label::after, .filterBox .filterBox-checkBox-group-list label::after {
+  .filterBox .filterBox-checkBox-selectAll label::after {
     height: 16px;
     width: 16px;
     font-size: 12px;
+  }
+  .filterBox .filterBox-checkBox-group-list {
+    font-size: 19px;
+  }
+  .filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label::before {
+    height: 18px;
+    width: 18px;
+  }
+  .filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label::after {
+    height: 16px;
+    width: 16px;
   }
 }
 @media (min-width: 1100px) {
@@ -143,7 +161,6 @@
     max-height: 75vh;
     grid-template-columns: repeat(2, 1fr);
   }
-
   .filterBox-group {
     width: 100%;
   }
@@ -293,7 +310,6 @@
 .scienceLiteracy-history-row-title h4 {
     font-size: 19px;
   }
-
   .scienceLiteracy-history-row-data .row-data-table .row-data-table-data p {
     font-size: 15px;
   }
@@ -311,11 +327,9 @@
   .scienceLiteracy-history-big-title {
     grid-template-columns: 1fr 1fr 0.3fr;
   }
-
   .scienceLiteracy-history-row-title {
     grid-template-columns: 1fr 1fr 0.3fr;
   }
-
   .scienceLiteracy-history-row-data {
     grid-template-columns: 100px 4fr;
     grid-gap: 10px;
@@ -401,7 +415,6 @@
   .sm-d-none {
     display: block;
   }
-
   .md-d-none {
     display: none;
   }
@@ -503,7 +516,7 @@ html {
 .contant-collapse {
   display: block;
   padding: 14px;
-  box-shadow: 0px 0px 5px #30313345;
+  box-shadow: 0px 0px 5px rgba(48, 49, 51, 0.2705882353);
   background: #fff;
   padding: 10px 10px 20px 10px;
   color: #5c5c5c;
@@ -548,23 +561,18 @@ html {
   .pageTab .pageTabList {
     font-size: 19px;
   }
-
   .selector-group {
     font-size: 19px;
   }
-
   .contant-collapse {
     font-size: 19px;
   }
-
   .input-group {
     font-size: 19px;
   }
-
   #download_history {
     font-size: 19px;
   }
-
   .search-btn {
     font-size: 19px;
   }
@@ -575,7 +583,6 @@ html {
     grid-template-columns: 1fr;
     grid-gap: 40px;
   }
-
   .contant-custom {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -590,7 +597,6 @@ html {
     grid-column: 3/4;
     margin-left: auto;
   }
-
   #download_history {
     width: 31%;
     margin-left: auto;
@@ -603,26 +609,21 @@ html {
     grid-template-columns: 0.5fr 3fr;
     grid-gap: 40px;
   }
-
   .selector-group {
     margin-top: 20px;
     margin-bottom: 20px;
   }
-
   .input-group {
     margin-top: 20px;
     margin-bottom: 20px;
   }
-
   .search-btn {
     width: 100%;
   }
-
   .contant-custom {
     display: block !important;
   }
-
   .contant-collapse {
     display: none;
   }
-}
+}/*# sourceMappingURL=index.css.map */
