--- a/學習歷程雷達/css/index.css
+++ b/學習歷程雷達/css/index.css
@@ -119,14 +119,12 @@ canvas {
 .scienceLiteracyStatistics-data.type-1, .scienceLiteracyStatistics-data.type-2, .scienceLiteracyStatistics-data.type-3 {
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;
+  margin-bottom: 40px;
 }
 .scienceLiteracyStatistics-data.type-1 .chart-container, .scienceLiteracyStatistics-data.type-2 .chart-container, .scienceLiteracyStatistics-data.type-3 .chart-container {
   width: 100%;
   min-height: 290px;
   grid-column: 1/3;
-}
-.scienceLiteracyStatistics-data.type-2 {
-  margin-bottom: 40px;
 }
 .scienceLiteracyStatistics-data.type-2 .sub-title {
   font-size: 15px;
@@ -219,7 +217,7 @@ canvas {
     margin-bottom: 70px;
   }
   .scienceLiteracyStatistics-data.type-1 .chart-container {
-    min-height: 500px;
+    min-height: 400px;
     grid-column: 1/4;
     margin-bottom: -80px;
   }
@@ -235,8 +233,11 @@ canvas {
     text-align: center;
   }
   .scienceLiteracyStatistics-data.type-2 .chart-container {
-    min-height: 290px;
+    min-height: 400px;
     grid-column: 1/4;
+  }
+  .scienceLiteracyStatistics-data.type-3 .chart-container {
+    min-height: 400px;
   }
   .scienceLiteracyStatistics-data .card {
     font-size: 19px;
