--- a/學習記錄/css/_downloadModal.scss
+++ b/學習記錄/css/_downloadModal.scss
@@ -75,6 +75,7 @@
         left: 2px;
         font-size: 10px;
         text-align: center;
+        line-height: 150%;
       }
     }
   }
@@ -108,6 +109,7 @@
           left: 2px;
           font-size: 10px;
           text-align: center;
+          line-height: 150%;
         }
       }
     }
@@ -139,8 +141,7 @@
       font-size: 19px;
     }
 
-    & .filterBox-checkBox-selectAll,
-    & .filterBox-checkBox-group-list {
+    & .filterBox-checkBox-selectAll {
       font-size: 19px;
       & label {
         &::before {
@@ -152,6 +153,21 @@
           height: 16px;
           width: 16px;
           font-size: 12px;
+        }
+      }
+    }
+    & .filterBox-checkBox-group-list {
+      font-size: 19px;
+      & .filterBox-checkBox-group {
+        & label {
+          &::before {
+            height: 18px;
+            width: 18px;
+          }
+          &::after {
+            height: 16px;
+            width: 16px;
+          }
         }
       }
     }
