--- a/學習歷程雷達/css/index.scss
+++ b/學習歷程雷達/css/index.scss
@@ -255,7 +255,7 @@ canvas {
       & .chart-container {
         min-height: 500px;
         grid-column: 1/6;
-        margin-bottom: -80px;
+        // margin-bottom: -80px;
       }
 
       & .card:nth-child(2) {
