Fix scienceLiteracyStatistics_container width

--- a/學生版/css/_radar.scss
+++ b/學生版/css/_radar.scss
@@ -13,7 +13,7 @@ canvas {
   border: none;
 }
 
-.container#scienceLiteracyStatistics_container {
+#scienceLiteracyStatistics_container {
   max-width: 1306px;
 
   .hr {
