--- a/學習歷程雷達/css/index.scss
+++ b/學習歷程雷達/css/index.scss
@@ -13,7 +13,7 @@ canvas {
   border: none;
 }
 
-.container#scienceLiteracyStatistics_container {
+#scienceLiteracyStatistics_container {
   max-width: 1306px;
 
   .hr {
